solc_ossfuzz_seed_corpus/test_sol/test_fdd3f74a392f51737f2f654bde3f80fc1687d5e4f16b95ae227c40e6787d6c51_217ea3250ad96dc709a00d9d9156724a77f29765_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
struct St0 {
  int56 el0;
  uint72 el1;
  string el2;
  bool el3;
}

==== Source: su1.sol ====
contract C0 {
  function f0(int48 i0) internal virtual   returns(uint168[] memory o0,address payable o1)
  {
    (bool l0, bytes memory l1) = address(this).call(bytes(string("ffffffffffffffffffffffffffffffffffdd9df9f1ccc78c0f1344")));
    (bool l2, bytes memory l3) = address(this).call(bytes("74a0c1c2f74d5e2e39a07a5227aad7c62d1985c4d278ff000000000000000000"));
  }
  int32 public constant cons0 = ((((((int32(1490114607) & int32(2147483647)) ** uint120(uint120(716566862009529597428647927600883929))) + int32(0)) | int32(2147483647)) ^ int32(2147483647)) ^ int32(2147483647));
  bytes10  public s0;
  bytes5   s1 = bytes5(0x7ae42d5c0e);
  uint240   s2;
  bool   s3;
  constructor(bytes10 i0,uint240 i1,bool i2) payable  {
    s0 ^= bytes10(0xffffffffffffffffffff);
    s2 %= (((uint240(1106422296758449057716916542987982900450472404066141826374606708090665452) % (uint240(0) | uint240(1766847064778384329583297500742918515827483896875618958121606201292619775))) + uint240(223028364889758052581487625329451207932964960685099141811888388973971753)) % uint240(0));
    s3 = ((uint208(0) - uint208((uint208(0) / uint208(0)))) < uint208(0));
    unchecked {
    }
  }
  error er0(function () internal   returns (bool, bytes memory, int64) ep0);
}
pragma solidity >= 0.0.0;
// ----
// Warning 3149: (su1.sol:404-501): The result type of the exponentiation operation is equal to the type of the first operand (int32) ignoring the (larger) type of the second operand (uint120) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 3417: (su1.sol:1177-1239): Internal or recursive type is not allowed as error parameter type.
